--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Jakarta Sans";
+  src: url("/PlusJakartaSans-VariableFont_wght.ttf")
+    format("truetype-variations");
+  font-weight: 1 999;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
 }
-
 
 body {
   color: rgb(var(--foreground-rgb));
